<resources>
    <string name="app_name">Gasto_Viagem</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="kms_per_liter">kMs por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="distance">Distância</string>

    <string name="empty_text_field">Campos de textos vazios</string>
    <string name="empty_text_autonomy_zero">Campo autonomia não pode ser igual a zero</string>
</resources>